Prevent footer overlapping media

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,6 +59,15 @@
   letter-spacing: 0;
 }
 
+body {
+  margin-bottom: 0 !important;
+  padding-bottom: 0;
+}
+
+.page__footer {
+  position: static;
+}
+
 #main,
 .page,
 .archive,
